Avoid horizontal scrolling

--- a/static/style.css
+++ b/static/style.css
@@ -26,9 +26,11 @@ body {
 
 #send input {
     width: 100%;
-    font-size: 120%;
-    padding: 0.4rem;
+    box-sizing: border-box;
+    padding: 0.5rem 0.5rem 0.6rem;
     margin: 0;
+
+    font-size: 120%;
 
     border-width: 1px 0 0 0;
     border-style: solid;
